tests/baselines/reference/unusedTypeParameterInMethod5.errors.txt
tests/cases/compiler/unusedTypeParameterInMethod5.ts(2,26): error TS6133: 'X' is declared but never used.


==== tests/cases/compiler/unusedTypeParameterInMethod5.ts (1 errors) ====
    class A {
        public f1 = function<X>() {
                             ~
!!! error TS6133: 'X' is declared but never used.
    
        }
    }